# sharly-chess-uac

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE_NOTES.md  changelog.md  pyproject.toml
.github/workflows/: export.yml
scripts/export/: export.py
src/: sharly_chess_uac.py
src/uac/: avast.py  uac.py  win_registry.py  windows_defender.py
